<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eur/Czk</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="to_eur">to EUR</string>
    <string name="to_czk">to CZK</string>
    <string name="button_convert">convert</string>
    <string name="button_cls">clear</string>
    <string name="button_share">share</string>
    <string name="menu_title">set exchange rate</string>
    <string name="menu_title_condensed">set rate</string>
    <string name="hint">enter amount</string>
    <string name="share_subject">email subject</string>
    
</resources>