<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hint"
         >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         >

        <RadioButton
            android:id="@+id/radioCZK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/to_czk" />

        <RadioButton
            android:id="@+id/radioEUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_eur" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_convert" />
    
    <Button
        android:id="@+id/buttonClear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cls" />
    
    <Button
        android:id="@+id/buttonShare"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_share" />

</LinearLayout>